Fix jumping layout on open drawer

--- a/src/app/components/manga/manga-chapter/manga-chapter.component.scss
+++ b/src/app/components/manga/manga-chapter/manga-chapter.component.scss
@@ -62,7 +62,7 @@
         font-size: 11px;
         padding: 5px;
         background-color: rgba(255, 255, 255, 0.6);
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(2px);
       }
     }
   }
