--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 button {
   /* Resetting default styles */
   appearance: none;
